# SUI

proj1/: .gitignore  .gitmodules  CMakeLists.txt  build.sh  compare.py  install.sh  run.sh  sui-solution.cc  test.py
proj2/: .gitignore  README.md  xulejv00.py  zadani.ipynb  zadani.py
proj3/: AI.ipynb  zadani.ipynb
